--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,13 @@
   ],
   "homepage": "http://www.opus-repository.org",
   "require": {
-    "zendframework/zendframework1": "1.12.*"
+    "laminas/laminas-config": "2.6.*",
+    "laminas/laminas-log": "2.12.0",
+    "laminas/laminas-http": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": "4.8.*",
-    "zendframework/zend-coding-standard": "1.0.0"
+    "phpunit/phpunit": "6.5.14",
+    "laminas/laminas-coding-standard": "1.0.0"
 
   },
   "autoload": {
