--- a/composer.json
+++ b/composer.json
@@ -4,16 +4,16 @@
   "license": "GPL-2.0+",
   "type": "library",
   "keywords": [
-    "opus4", "doi"
+    "opus4",
+    "doi"
   ],
   "homepage": "http://www.opus-repository.org",
   "require": {
     "zendframework/zendframework1": "1.12.*"
   },
   "require-dev": {
-    "phpunit/phpunit": "4.8.*",
+    "phpunit/phpunit": "6.*",
     "zendframework/zend-coding-standard": "1.0.0"
-
   },
   "autoload": {
     "psr-4": {
