--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
   },
   "require-dev": {
     "phpunit/phpunit": "6.*",
-    "zendframework/zend-coding-standard": "1.0.0"
+    "laminas/laminas-coding-standard": "<2.3"
   },
   "autoload": {
     "psr-4": {
