--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,8 @@
     "phpunit/phpunit": "<9",
     "opus4-repo/codesniffer": "dev-laminas"
   },
+  "minimum-stability": "dev",
+  "prefer-stable": true,
   "autoload": {
     "psr-4": {
       "Opus\\Doi\\": "src/"
