--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
   ],
   "homepage": "http://www.opus-repository.org",
   "require": {
+    "php": ">=8.1",
     "ext-dom": "*",
     "ext-curl": "*",
     "ext-mbstring": "*",
@@ -16,7 +17,7 @@
     "opus4/zf1-future": "1.21.*"
   },
   "require-dev": {
-    "phpunit/phpunit": "<9",
+    "phpunit/phpunit": "10.5.*",
     "opus4-repo/codesniffer": "dev-laminas"
   },
   "minimum-stability": "dev",
